--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -2,12 +2,15 @@ h1 {
 	font-family: "teimer-web",didone,serif;
 	font-weight: 600;
 	color: black;
+	font-weight: 600;
 }
 h1, h2 {
 	font-style: normal;
-	font-weight: 600;
 	text-align: center;
 	text-transform: uppercase;
+}
+h2 {
+	font-weight: 900;
 }
 html {
 	background-image: url(/images/gold.jpg);
@@ -61,4 +64,8 @@ h2 {
 a {
 	font-weight: 700;
 	font-style: italic;
+}
+#poem {
+	font-style: italic;
+	font-weight: 600;
 }
